--- a/projects minor/050.2/050.2.html
+++ b/projects minor/050.2/050.2.html
@@ -9,7 +9,7 @@
 <html>
 
 <body>
-    <form action="#" name="UserEnter" target="_blank">
+    <form action="https://www.yandex.ru/search?" name="UserEnter" target="_blank">
         <table cellspacing="0" cellpadding="6" border="5">
             <tr>
                 <td colspan="3" align="center">
