--- a/projectsminor/060./060.html
+++ b/projectsminor/060./060.html
@@ -15,6 +15,7 @@
             <li><a href="../заданиеpass1.3/зад1.3.html">Задание 1.3</a></li>
             <li><a href="../040.1/040.1.html">Задание 4.1</a></li>
             <li><a href="../040.2/040.2.html">Задание 4.2</a></li>
+            <li><a href="../050.2/050.2.html">Задание 5.2</a></li>
             <li><a href="../060./060.html">Задание 6.1</a></li>
         </ul>
     </nav>
