--- a/projectsminor/задание1.1/зад1.1.html
+++ b/projectsminor/задание1.1/зад1.1.html
@@ -5,6 +5,17 @@
     <title>Огурцы</title>
 </head>
 <body>
+     <nav>
+        <ul>
+            <li><a href="../задание 1.1/зад1.1.html">Задание 1.1</a></li>
+            <li><a href="../заданиеpass1.2/1.2.html">Задание 1.2</a></li>
+            <li><a href="../заданиеpass1.3/зад1.3.html">Задание 1.3</a></li>
+            <li><a href="../040.1/040.1.html">Задание 4.1</a></li>
+            <li><a href="../040.2/040.2.html">Задание 4.2</a></li>
+            <li><a href="../050.2/050.2.html">Задание 5.2</a></li>
+            <li><a href="../060./060.html">Задание 6.1</a></li>
+        </ul>
+    </nav>
     <h1 align="center">I love ogurtsy</h1>
     <img src="cucumbers.jpg" alt="Ogurtsy" width="300"> 
     <font color="Purple" face="GothicG" size=4><p>Огурцы - это одна из самых популярных и полезных овощных культур, которые выращиваются во многих странах мира. Огурцы имеют низкую калорийность, высокое содержание воды и витаминов, а также приятный освежающий вкус. Огурцы можно употреблять в свежем виде, солить, мариновать, добавлять в салаты и другие блюда. Огурцы также используются в косметологии и народной медицине.</p> </font>
