--- a/projectsminor/заданиеpass1.3/зад1.3.html
+++ b/projectsminor/заданиеpass1.3/зад1.3.html
@@ -59,6 +59,17 @@
 </style>
 </head>
 <body>
+     <nav>
+        <ul>
+            <li><a href="../задание 1.1/зад1.1.html">Задание 1.1</a></li>
+            <li><a href="../заданиеpass1.2/1.2.html">Задание 1.2</a></li>
+            <li><a href="../заданиеpass1.3/зад1.3.html">Задание 1.3</a></li>
+            <li><a href="../040.1/040.1.html">Задание 4.1</a></li>
+            <li><a href="../040.2/040.2.html">Задание 4.2</a></li>
+            <li><a href="../050.2/050.2.html">Задание 5.2</a></li>
+            <li><a href="../060./060.html">Задание 6.1</a></li>
+        </ul>
+    </nav>
     <div class="block1">УФМС РОССИИ ПО ГОР. МОСКВЕ <br> ПО РАЙОНУ Х</div>
     <div class="block2"> 29.12.2016</div>
     <div class="block3"> 770-64</div>
