--- a/projectsminor/040.2/040.2.html
+++ b/projectsminor/040.2/040.2.html
@@ -7,6 +7,17 @@
 </head>
 
 <body background="https://images.wallpaperscraft.ru/image/single/gory_derevia_pejzazh_1059140_300x168.jpghttps://images.wallpaperscraft.ru/image/single/gory_derevia_pejzazh_1059140_300x168.jpg">
+     <nav>
+        <ul>
+            <li><a href="../задание 1.1/зад1.1.html">Задание 1.1</a></li>
+            <li><a href="../заданиеpass1.2/1.2.html">Задание 1.2</a></li>
+            <li><a href="../заданиеpass1.3/зад1.3.html">Задание 1.3</a></li>
+            <li><a href="../040.1/040.1.html">Задание 4.1</a></li>
+            <li><a href="../040.2/040.2.html">Задание 4.2</a></li>
+            <li><a href="../050.2/050.2.html">Задание 5.2</a></li>
+            <li><a href="../060./060.html">Задание 6.1</a></li>
+        </ul>
+    </nav>
     <table bgcolor="gray" border="2" 
     bordercolor="red" cellspacing="15" 
     width="600" align="center" cellpadding="10">
