--- a/projectsminor/050.2/050.2.html
+++ b/projectsminor/050.2/050.2.html
@@ -9,6 +9,17 @@
 <html>
 
 <body>
+     <nav>
+        <ul>
+            <li><a href="../задание 1.1/зад1.1.html">Задание 1.1</a></li>
+            <li><a href="../заданиеpass1.2/1.2.html">Задание 1.2</a></li>
+            <li><a href="../заданиеpass1.3/зад1.3.html">Задание 1.3</a></li>
+            <li><a href="../040.1/040.1.html">Задание 4.1</a></li>
+            <li><a href="../040.2/040.2.html">Задание 4.2</a></li>
+            <li><a href="../050.2/050.2.html">Задание 5.2</a></li>
+            <li><a href="../060./060.html">Задание 6.1</a></li>
+        </ul>
+    </nav>
     <form action="https://www.yandex.ru/search?" name="UserEnter" target="_blank">
         <table cellspacing="0" cellpadding="6" border="5">
             <tr>
